--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "type": "module",
   "dependencies": {
+    "nodejieba": "^2.5.2",
     "qrcode": "^1.4.4",
     "wechaty": "^1.0.6"
   }
